Changes to gameplay, added Finn's sound, changes to site

--- a/styles/master.css
+++ b/styles/master.css
@@ -37,3 +37,29 @@ h1, a{
   bottom: 20px;
   width: 30px;
 }
+.title
+{
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.title>img{
+  display: block;
+  /* margin: 0 auto; */
+  width: 200px;
+  /* border: 2px solid red; */
+  margin-bottom: -50px;
+}
+.row>div{
+}
+#Finn{
+  width: 100%;
+}
+#footer{
+  width: 100%;
+  padding: 50px;
+  text-align: center;
+}
+#descText{
+  padding-top: 75px;
+}
